; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/dc01/left/extr_i2c.c_i2c_master_write.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/dc01/left/extr_i2c.c_i2c_master_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWDR = common dso_local global i32 0, align 4
@TWINT = common dso_local global i32 0, align 4
@TWEN = common dso_local global i32 0, align 4
@TWCR = common dso_local global i32 0, align 4
@TW_STATUS = common dso_local global i64 0, align 8
@TW_MT_DATA_ACK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2c_master_write(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @TWDR, align 4
  %4 = load i32, i32* @TWINT, align 4
  %5 = shl i32 1, %4
  %6 = load i32, i32* @TWEN, align 4
  %7 = shl i32 1, %6
  %8 = or i32 %5, %7
  store i32 %8, i32* @TWCR, align 4
  %9 = call i32 (...) @i2c_delay()
  %10 = load i64, i64* @TW_STATUS, align 8
  %11 = load i64, i64* @TW_MT_DATA_ACK, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 0, i32 1
  ret i32 %14
}

declare dso_local i32 @i2c_delay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
